@@ -7,6 +7,8 @@
 
 	* GRBox.m
 	* GRImage.m
+	* GRBezierPath.m
+	* GRCircle.m
 	Use the editor inited in super.
 
 2015-03-31 Riccardo Mottola <rm@gnu.org>
